plugins {
    id 'dev.architectury.loom-no-remap' version '1.17-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.5-SNAPSHOT'
    id 'com.gradleup.shadow' version '9.6.1' apply false
    id 'me.modmuss50.mod-publish-plugin' version '2.2.0' apply false
}

architectury {
    minecraft = rootProject.minecraft_version
}

allprojects {
    apply plugin: 'java-library'
    apply plugin: 'architectury-plugin'

    group = rootProject.maven_group
    version = rootProject.mod_version

    java {
        withSourcesJar()
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    tasks.withType(JavaCompile).configureEach {
        options.release = 25
    }
}

subprojects {
    apply plugin: 'dev.architectury.loom-no-remap'
    apply plugin: 'maven-publish'

    def isCommon = project.name == 'common'

    base {
        archivesName = "${rootProject.mod_id}-${rootProject.minecraft_version}-${project.name}"
    }

    repositories {
        mavenLocal()
        maven { url 'https://maven.exodusstudio.org/releases' }
        maven { url 'https://maven.exodusstudio.org/snapshots' }
        maven { url 'https://maven.terraformersmc.com/releases' }
        maven { url 'https://maven.blamejared.com/' }
        maven { url 'https://maven.shedaniel.me/' }
        maven { url 'https://api.modrinth.com/maven' } // Jade
        maven {
            name = 'NeoForged'
            url = 'https://maven.neoforged.net/releases'
        }
    }

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "net.minecraft:minecraft:${rootProject.minecraft_version}"

        implementation "fr.tathan.exoconfig:exoconfig-${project.name}-${rootProject.minecraft_version}:${rootProject.exoconfig_version}"
        implementation "fr.tathan.sky-aesthetics:sky-aesthetics-${project.name}-${rootProject.minecraft_version}:${rootProject.skyaesthetics_version}"
    }

    if (!isCommon) {
        apply plugin: 'com.gradleup.shadow'

        configurations {
            common
            shadowCommon
            compileClasspath.extendsFrom common
            runtimeClasspath.extendsFrom common
        }

        jar {
            archiveClassifier = 'raw'
        }

        shadowJar {
            dependsOn jar
            mainSpec.sourcePaths.clear()
            from(zipTree(tasks.jar.archiveFile))
            configurations = [project.configurations.shadowCommon]
            archiveClassifier = null
            zip64 = true
        }

        assemble.dependsOn shadowJar

        configurations {
            apiElements {
                outgoing.artifacts.clear()
                outgoing.artifact(project.tasks.shadowJar)
            }
            runtimeElements {
                outgoing.artifacts.clear()
                outgoing.artifact(project.tasks.shadowJar)
            }
        }

        apply plugin: 'me.modmuss50.mod-publish-plugin'

        def modLoader = project.name
        def loaderName = modLoader == 'neoforge' ? 'NeoForge' : modLoader.capitalize()
        def supportedMinecraftVersions = rootProject.supported_minecraft_versions.split(',')*.trim()

        publishMods {
            file = tasks.shadowJar.archiveFile
            changelog = providers.fileContents(rootProject.layout.projectDirectory.file('changelog.md'))
                    .asText.orElse('No changelog provided.')
            version = rootProject.mod_version
            modLoaders.add(modLoader)
            displayName = "[${loaderName} ${rootProject.minecraft_version}] Stellaris ${rootProject.mod_version}"

            switch (rootProject.release_type.toLowerCase()) {
                case 'stable': type = STABLE; break
                case 'beta': type = BETA; break
                case 'alpha': type = ALPHA; break
                default: throw new GradleException("release_type must be stable, beta or alpha, but was '${rootProject.release_type}'")
            }

            dryRun = providers.gradleProperty('publishDryRun').map { Boolean.parseBoolean(it) }.getOrElse(false)

            curseforge {
                projectId = '1036270'
                projectSlug = 'stellaris'
                accessToken = providers.environmentVariable('CURSEFORGE_API_KEY')
                minecraftVersions.addAll(supportedMinecraftVersions)
                javaVersions.add(JavaVersion.VERSION_25)
                // Required since 2.0, and renamed from clientRequired/serverRequired.
                client = true
                server = true

                requires('architectury-api', 'potentials', 'exoconfig', 'sky-aesthetics')
                optional('jei', 'jade', 'roughly-enough-items')
                if (modLoader == 'fabric') {
                    requires('fabric-api')
                    optional('modmenu')
                }
            }

            modrinth {
                projectId = 'ItTQpuBn'
                accessToken = providers.environmentVariable('MODRINTH_TOKEN')
                minecraftVersions.addAll(supportedMinecraftVersions)

                requires('architectury-api', 'potentials', 'exoconfig', 'sky-aesthetics')
                optional('jei', 'jade', 'rei')
                if (modLoader == 'fabric') {
                    requires('fabric-api')
                    optional('modmenu')
                }
            }
        }
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        repositories {
            maven {
                name = 'ExodusStudio'
                url = 'https://maven.exodusstudio.org/releases/'
                credentials {
                    username = System.getenv('EXODUS_MAVEN_USERNAME')
                    password = System.getenv('EXODUS_MAVEN_KEY')
                }
            }
        }
    }
}
